# PythonEMSPrototype

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  ems_implementation.py  ems_interface.py  in.idf  main.c  main.cpp  py_embed.spec
docs/: Makefile  api.rst  background.rst  conf.py  index.rst  python.rst  python_paths.rst  workflows.rst
example/: in.idf
example/my_example_python_ems/: py_ems_implementation.py
example/my_example_python_ems/special_py_package/: special_functions.py
example/my_plugins/: plugins.py
example/my_plugins/special_py_package/: special_functions.py
example2/: in.idf
example2/my_plugins_2/: plugins_2.py
include/: api.h  ems_manager.h  file_system.h  simulation.h  utility.h
my_py_ems/: ems_implementation.py  py_ems_implementation.py  py_ems_interface.py
notes/: python.md
plugin_interface/: README.rst  setup.py
plugin_interface/energyplus_plugin/: __init__.py  interface.py  script_tester.py
scripts/: build_linux_travis.sh  build_mac_travis.sh  build_windows_travis.sh  build_windows_travis_debug.sh  build_windows_travis_release.sh  copy_plugin_to_build_dir.sh  launch.sh  launch_bash.sh  package_python.sh
src/: api.cpp  ems_manager.cpp  file_system.cpp  main.cpp  utility.cpp
